<resources>
    <string name="app_name">coffeeMaker</string>
    <string name="order0">전 얼죽아예요.</string><!--아이스 아메리카노-->
    <string name="order1">블랙 커피. 뜨겁게.</string><!--핫 아메리카노-->
    <string name="order2">시원한 라떼 하나 주세요.</string><!--아이스 라떼-->
    <string name="order3">커피! 뜨겁게! 우유 많이!</string><!--핫 라떼-->
    <string name="order4">당이 떨어지네요... 차갑게 우유 들어간 걸로 부탁해요.</string><!--아이스 바닐라라떼-->
    <string name="order5">달고 따뜻한 커피 있나요? 우유가 들어간 거면 좋겠는데...</string><!--핫 바닐라라떼-->
    <string name="order6">시원하고 단 커피 주세요. 아, 전 우유를 못 먹어요.</string><!--아이스 바닐라아메리카노-->
    <string name="order7">색다른 향기가 나는 아메리카노 뜨겁게요.</string><!--핫 바닐라아메리카노-->
    <string name="order8">카페인 없는 시원한 음료 주세요.</string><!--아이스 레몬차-->
    <string name="order9">감기에 걸렸어요... 콜록!</string><!--핫 레몬차-->
    <string name="order10">아이스 슈렉 주스...</string><!--아이스 녹차라떼-->
    <string name="order11">따뜻한! 초록!</string><!--핫 녹차라떼-->
    <string name="order12">딸기랑 우유 주세요</string><!--딸기라떼-->

    <string name="orderMessage">client order message</string>
    <string name="goToMake">Make!</string>
    <string name="complete">Complete!</string>
    <string name="getNewClient">Get New Client</string>

    <string name="ice">Ice</string>
    <string name="water">Water</string>
    <string name="coffee">Coffee</string>
    <string name="milk">Milk</string>
    <string name="vanillaSyrup">Vanilla Syrup</string>
    <string name="lemon">Lemon</string>
    <string name="greenTea">Greentea Powder</string>
    <string name="strawberry">Strawberry Puree</string>

    <string name="completeMsg100">너무 완벽해요! 모든 게 마음에 들어요.</string>
    <string name="completeMsg85">마음에 들어요. 다음에 또 오고 싶군요.</string>
    <string name="completeMsg70">맛있네요.</string>
    <string name="completeMsg55">흠... 감사합니다.</string>
    <string name="completeMsg40">이게 제가 시킨 음료 맞나요?</string>
    <string name="completeMsg25">뭔가 잘못된 것 같은데요? 맛이 없어요.</string>
    <string name="completeMsg10">지금 장난하세요?</string>
    <string name="completeMsg0">이걸 돈 받고 팔아? 야 사장 나오라 그래!</string>
    <string name="completeMsgNegative">저 왜 음료 안 주세요???</string>
</resources>