<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreKitchen"
    android:orientation="vertical"
    android:background="@drawable/kitchen">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="50dp">

        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:text="@string/complete"
            android:textColor="@color/black"></Button>
    </LinearLayout>
<!--    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="10dp"></LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom">
        <ImageButton
            android:id="@+id/water_toggle"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/water"
            android:contentDescription="@string/water"
            ></ImageButton>
        <ImageButton
            android:id="@+id/milk_toggle"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/milk"
            android:contentDescription="@string/milk"
            ></ImageButton>
        <ImageButton
            android:id="@+id/ice_toggle"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/icebucket"
            android:contentDescription="@string/ice"
            ></ImageButton>
        <ImageButton
            android:id="@+id/coffee_toggle"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/coffee"
            android:contentDescription="@string/coffee"
            ></ImageButton>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom"
        >
        <ImageButton
            android:id="@+id/vanilla_toggle"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/vanillasyrup"
            android:contentDescription="@string/vanillaSyrup"
            ></ImageButton>
        <ImageButton
            android:id="@+id/lemon_toggle"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/lemonpuree"
            android:contentDescription="@string/lemon"
            ></ImageButton>
        <ImageButton
            android:id="@+id/matcha_toggle"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/greenteapowder"
            android:contentDescription="@string/greenTea"
            ></ImageButton>
        <ImageButton
            android:id="@+id/strawberry_toggle"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/strawberrypuree"
            android:contentDescription="@string/strawberry"
            ></ImageButton>
    </LinearLayout>
</LinearLayout>